--- a/ai-service.yaml
+++ b/ai-service.yaml
@@ -11,32 +11,32 @@ spec:
     metadata:
       labels:
         app: ai-service
+        azure.workload.identity/use: "true"
     spec:
+      serviceAccountName: ai-service-account
       nodeSelector:
         "kubernetes.io/os": linux
       containers:
       - name: order-service
-        image: ghcr.io/azure-samples/aks-store-demo/ai-service:latest
+        image: acraksstoredemo.azurecr.io/aksstoredemo:v1
         ports:
         - containerPort: 5001
         env:
         - name: USE_AZURE_OPENAI # set to True for Azure OpenAI, False for Public OpenAI
-          value: ""
+          value: "True"
+        - name: USE_AZURE_AD
+          value: "True"
         - name: AZURE_OPENAI_DEPLOYMENT_NAME # required if using Azure OpenAI
-          value: ""
+          value: "my-gpt-model"
         - name: AZURE_OPENAI_ENDPOINT # required if using Azure OpenAI
-          value: ""
-        - name: OPENAI_API_KEY # always required
-          value: ""
-        - name: OPENAI_ORG_ID # required if using Public OpenAI
-          value: ""
+          value: "https://oai-dev-cls.openai.azure.com/"
         resources:
           requests:
             cpu: 20m
             memory: 46Mi
           limits:
-            cpu: 30m
-            memory: 50Mi
+            cpu: 80m
+            memory: 1024Mi
 ---
 apiVersion: v1
 kind: Service
